<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/ic_explore"
        android:title="@string/nav_explore" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/logSightingFragment"
        android:icon="@drawable/ic_log"
        android:title="@string/nav_log" />

    <item
        android:id="@+id/favouritesFragment"
        android:icon="@drawable/ic_favourites"
        android:title="@string/nav_favourites" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

</menu>